class5/blue_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
spec:
  selector:
    matchLabels:
      app: v1
  replicas: 2
  template:
    metadata:
      labels:
        app: v1
        canary: green-blue
    spec:
      containers:
      - name: blue
        image: supergiantkir/animals:hare
        ports:
        - containerPort: 80
