class5/green_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
spec:
  selector:
    matchLabels:
      app: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: v2
        canary: green-blue
    spec:
      containers:
      - name: green
        image: supergiantkir/animals:bear
        ports:
        - containerPort: 80
