class5/bear_service.yml
kind: Service
apiVersion: v1
metadata:
  name: bear-service
spec:
  selector:
    app: bear
  ports:
    - port: 80
      targetPort: 80
