class5/blue_green_service.yml
kind: Service
apiVersion: v1
metadata:
  name: blue-green-service
spec:
  selector:
    canary: green-blue
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
