class5/bear_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /bear(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: bear-service
            port:
              number: 80
